Updated active crypto

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -106,8 +106,7 @@
                         <div class="bg-secondary text-center rounded p-4">
                             <div class="d-flex align-items-center justify-content-between mb-4">
                                 <h6 class="mb-0 text-light">Active CryptoCurrency Market</h6>
-                                <a href="" class="text-light">Show All</a>
-                            </div>
+                                <a href="{% url 'active_crypto' %}">Show All</a>
                             {% block Left_Plot %}
 
                                 {% autoescape off %}
