Added live prices title and improved UI

--- a/app/templates/base1.html
+++ b/app/templates/base1.html
@@ -59,22 +59,17 @@ body {
                   <li class="nav-item">
                     <a class="nav-link" href="\index">CryptoCurrency Price Prediction</a>
                   </li>
-
-
                   <li class="nav-item">
                     <a class="nav-link" href="\news">News</a>
-                  </li>
-                  
-              {% else %}
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Bitcoin Prediction</a>
-                  </li>
-              
-                
-                  
+                  </li>   
               {% endif %}  
+
               <li class="nav-item">
-                <a class="nav-link" href="\logout">Logout</a>
+                <a class="nav-link" href="\logout">Login</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="\register_user">Register</a>
               </li>
             </ul>
             
