--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,6 +8,12 @@
   </div>
 
   <div class="row justify-content-center">
+    <div class="col-12 text-center mb-4">
+      <h2 class="text-white" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.5);">
+          <i class="fas fa-chart-line"></i> Live Crypto Prices
+      </h2>
+      <p class="text-light">Current market prices updated in real-time</p>
+  </div>
     {% if live_prices %}
       {% for crypto in live_prices %}
         <div class="col-md-3 mb-4">
