--- a/app/templates/base1.html
+++ b/app/templates/base1.html
@@ -61,16 +61,19 @@ body {
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="\news">News</a>
-                  </li>   
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="\logout">Logout</a>
+                  </li>  
               {% endif %}  
-
+              {% if not user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="\logout">Login</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="\register_user">Register</a>
               </li>
+              {% endif %}  
             </ul>
             
           </div>
